--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 	<meta name="description" content="野方駅徒歩8分、小動物と小鳥の専門病院「野方バードクリニック | Nogata Bird Clinic です。">
 	<meta name="keywords" content="野方,杉並,動物病院,鳥,小鳥,小動物,インコ,オウム,セキセイ,文鳥,ウサギ,ハムスター,デグー,チンチラ">
 	<title>野方バードクリニック | Nogata Bird Clinic</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 	<header>
 		<h1>
-			<img src="img/logo.png" alt="野方バードクリニックロゴ">
+			<img src="./img/logo.png" alt="野方バードクリニックロゴ">
 		</h1>
 		<nav>
 			<ul class="gnav-list">
-				<li><a href="#"><img src="img/btn_home.png" alt="">ホーム</a></li>
-				<li><a href="#"><img src="img/btn_guidance.png" alt="">診療について</a></li>
-				<li><a href="#"><img src="img/btn_stuff.png" alt="">スタッフ紹介</a></li>
-				<li><a href="#"><img src="img/btn_qa.png" alt="">こんなときは</a></li>
-				<li><a href="#"><img src="img/btn_access.png" alt="">アクセス</a></li>
-				<li><a href="#"><img src="img/btn_recruitment.png" alt="">求人情報</a></li>
+				<li><a href="#"><./img src="img/btn_home.png" alt="">ホーム</a></li>
+				<li><a href="#"><./img src="img/btn_guidance.png" alt="">診療について</a></li>
+				<li><a href="#"><./img src="img/btn_stuff.png" alt="">スタッフ紹介</a></li>
+				<li><a href="#"><./img src="img/btn_qa.png" alt="">こんなときは</a></li>
+				<li><a href="#"><./img src="img/btn_access.png" alt="">アクセス</a></li>
+				<li><a href="#"><./img src="img/btn_recruitment.png" alt="">求人情報</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -49,8 +49,8 @@ TEL:03-3461-8005
 
 詳しくはメールにてお問い合わせください。
 その後面談をいたします。
-indy_indy☆yahoo.co.jp　
-（↑の☆マークを@に変更し、件名を【スタッフ募集について】として送信してください） 
+nogatabird☆12345.co.jp　
+（↑の☆マークを@に変更し、件名を【スタッフ募集について】として送信してください）
 
 診療時間
 AM10:00～PM1:00
