--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 		</h1>
 		<nav>
 			<ul class="gnav-list">
-				<li><a href="#"><./img src="img/btn_home.png" alt="">ホーム</a></li>
-				<li><a href="#"><./img src="img/btn_guidance.png" alt="">診療について</a></li>
-				<li><a href="#"><./img src="img/btn_stuff.png" alt="">スタッフ紹介</a></li>
-				<li><a href="#"><./img src="img/btn_qa.png" alt="">こんなときは</a></li>
-				<li><a href="#"><./img src="img/btn_access.png" alt="">アクセス</a></li>
-				<li><a href="#"><./img src="img/btn_recruitment.png" alt="">求人情報</a></li>
+				<li><a href="#"><./img src="./img/btn_home.png" alt="">ホーム</a></li>
+				<li><a href="#"><./img src="./img/btn_guidance.png" alt="">診療について</a></li>
+				<li><a href="#"><./img src="./img/btn_stuff.png" alt="">スタッフ紹介</a></li>
+				<li><a href="#"><./img src="./img/btn_qa.png" alt="">こんなときは</a></li>
+				<li><a href="#"><./img src="./img/btn_access.png" alt="">アクセス</a></li>
+				<li><a href="#"><./img src="./img/btn_recruitment.png" alt="">求人情報</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -35,7 +35,7 @@
 TEL:03-3461-8005
 
 
-2019年8月26日（月）～8月27日（火）は休診とさせていただきます。
+2020年8月2５日（月）～8月2６日（火）は休診とさせていただきます。
 ご了承ください。
 
 
