--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
 		</h1>
 		<nav>
 			<ul class="gnav-list">
-				<li><a href="#"><./img src="./img/btn_home.png" alt="">ホーム</a></li>
-				<li><a href="#"><./img src="./img/btn_guidance.png" alt="">診療について</a></li>
-				<li><a href="#"><./img src="./img/btn_stuff.png" alt="">スタッフ紹介</a></li>
-				<li><a href="#"><./img src="./img/btn_qa.png" alt="">こんなときは</a></li>
-				<li><a href="#"><./img src="./img/btn_access.png" alt="">アクセス</a></li>
-				<li><a href="#"><./img src="./img/btn_recruitment.png" alt="">求人情報</a></li>
+				<li><a href="#"><img src="./img/btn_home.png" alt="">ホーム</a></li>
+				<li><a href="#"><img src="./img/btn_guidance.png" alt="">診療について</a></li>
+				<li><a href="#"><img src="./img/btn_stuff.png" alt="">スタッフ紹介</a></li>
+				<li><a href="#"><img src="./img/btn_qa.png" alt="">こんなときは</a></li>
+				<li><a href="#"><img src="./img/btn_access.png" alt="">アクセス</a></li>
+				<li><a href="#"><img src="./img/btn_recruitment.png" alt="">求人情報</a></li>
 			</ul>
 		</nav>
 	</header>
-	◆ Top
+	
+	<section>
+<p>動物病院でも数少ない小鳥と小動物の専門病院です。<br>
+愛鳥の病気や健康診断、心配事のご相談に応じます。<br>
+※電話のみでの飼育相談、病気の相談は行っておりません。</p>
 
-動物病院でも数少ない小鳥と小動物の専門病院です。
-愛鳥の病気や健康診断、心配事のご相談に応じます。
-※電話のみでの飼育相談、病気の相談は行っておりません。
-
-TEL:03-3461-8005
-
-
-2020年8月2５日（月）～8月2６日（火）は休診とさせていただきます。
-ご了承ください。
-
-
-スタッフ募集 NEW
+<p>TEL:03-3461-8005</p>
+</section>
+<section>
+<p>2020年8月25日（月）～8月26日（火）は休診とさせていただきます。<br>
+ご了承ください。</p>
+</section>
+<section>
+スタッフ募集
 正社員・パート・アルバイトの認定動物看護師さん・獣医師さんを募集しています。
 
 小鳥や小さな動物たちが大好きで、やる気がある方。
@@ -49,9 +49,10 @@ TEL:03-3461-8005
 
 詳しくはメールにてお問い合わせください。
 その後面談をいたします。
-nogatabird☆12345.co.jp　
+nogatabird☆12345.co.jp
 （↑の☆マークを@に変更し、件名を【スタッフ募集について】として送信してください）
-
+</section>
+<section>
 診療時間
 AM10:00～PM1:00
 PM3:00～PM6:00
@@ -60,15 +61,15 @@ PM3:00～PM6:00
 
 前の方の診察状況により予約時間に診察が開始できず、お待ちいただく場合もあります。
 お時間の余裕をもってご来院をお願いいたします。
-
-
+</section>
+<section>
 予約方法
-TEL:03-3461-8005
+TEL:03-1234-5678
 AM10:00～PM1:00
 PM3:00～PM6:00
-水曜・日曜・祝日は休診のためお電話に出られません
-開院時間内でのご連絡をお願いします
-
+水曜・日曜・祝日は休診のため電話に出られません
+開院時間内のご連絡をお願いします。
+</section>
 
 
 診療動物
