--- a/access/index.html
+++ b/access/index.html
@@ -21,7 +21,7 @@
 					<li><a href="../index.html"><img src="../img/btn_home.png" alt="ホーム"></a></li>
 					<li><a href="../guidance/index.html"><img src="../img/btn_guidance.png" alt="診療について"></a></li>
 					<li><a href="../stuff/index.html"><img src="../img/btn_stuff.png" alt="スタッフ紹介"></a></li>
-					<li><a href="./index.html"><img src="../img/btn_access.png" alt="アクセス"></a></li>
+					<li><a href="./index.html"><img src="../img/btn_hover_access.png" alt="アクセス"></a></li>
 					<li><a href="../careers/index.html"><img src="../img/btn_recruitment.png" alt="求人情報"></a></li>
 				</ul>
 			</nav>
