--- a/guidance/index.html
+++ b/guidance/index.html
@@ -19,7 +19,7 @@
 			<nav>
 				<ul class="gnav-list">
 					<li><a href="../index.html"><img src="../img/btn_home.png" alt="ホーム"></a></li>
-					<li><a href="./index.html"><img src="../img/btn_guidance.png" alt="診療について"></a></li>
+					<li><a href="./index.html"><img src="../img/btn_hover_guidance.png" alt="診療について"></a></li>
 					<li><a href="../stuff/index.html"><img src="../img/btn_stuff.png" alt="スタッフ紹介"></a></li>
 					<li><a href="#"><img src="../img/btn_access.png" alt="アクセス"></a></li>
 					<li><a href="../careers/index.html"><img src="../img/btn_recruitment.png" alt="求人情報"></a></li>
