--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<!-- グローバルナビ -->
 			<nav>
 				<ul class="gnav-list">
-					<li><a href="./index.html"><img src="./img/btn_home.png" alt="ホーム"></a></li>
+					<li><a href="./index.html"><img src="./img/btn_hover_home.png" alt="ホーム"></a></li>
 					<li><a href="./guidance/index.html"><img src="./img/btn_guidance.png" alt="診療について"></a></li>
 					<li><a href="./stuff/index.html"><img src="./img/btn_stuff.png" alt="スタッフ紹介"></a></li>
 					<li><a href="./access/index.html"><img src="./img/btn_access.png" alt="アクセス"></a></li>
