footerリンク先修正

--- a/careers/index.html
+++ b/careers/index.html
@@ -55,8 +55,8 @@
 		<div class="footer-info">
 			<section class="footer-link">
 				<a href="../index.html"><img src="../img/logo大-01.png" alt="野方バードクリニックロゴ"></a>
-				<p class="footer-btn"><a href="#">アクセス</a></p>
-				<p class="footer-btn"><a href="#">診療について</a></p>
+				<p class="footer-btn"><a href="../access/index.html">アクセス</a></p>
+				<p class="footer-btn"><a href="../guidance/index.html">診療について</a></p>
 			</section>
 			<section>
 				<div class="info-schedule">
