--- a/careers/index.html
+++ b/careers/index.html
@@ -97,7 +97,7 @@
 						</p>
 						<p>当院は完全予約制です。ご来院前に電話でご予約ください。<br></p>
 						<address>
-							<p>野方バードクリニック／〒165-0027 東京都杉並区野方7-6-5
+							<p>野方バードクリニック／〒165-0027 東京都中野区野方7-6-5
 							</p>
 						</address>
 				</div>
