--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<li class="close"><span>閉じる</span></li>
 				</ul>
 			</nav>
+			<!-- トグル -->
 			<div id="gnav-toggle">
 				<span></span>
 			</div>
