レスポンシブのレイアウトを修正

--- a/careers/index.html
+++ b/careers/index.html
@@ -34,7 +34,7 @@
 				<ul class="gnav-list">
 					<li><a href="../index.html"><img src="../img/btn_home.png" alt="ホーム"></a></li>
 					<li><a href="../guidance/index.html"><img src="../img/btn_guidance.png" alt="診療について"></a></li>
-					<li><a href="../stuff/index.html"><img src="../img/btn_stuff.png" alt="スタッフ紹介"></a></li>
+					<li class="stuff"><a href="../stuff/index.html"><img src="../img/btn_stuff.png" alt="スタッフ紹介"></a></li>
 					<li><a href="../access/index.html"><img src="../img/btn_access.png" alt="アクセス"></a></li>
 					<li><a href="./index.html"><img src="../img/btn_hover_recruitment.png" alt="求人情報"></a></li>
 				</ul>
