--- a/index.html
+++ b/index.html
@@ -71,61 +71,63 @@
 		</section>
 
 		<section class="info">
-			<div class="info-news">
-				<h3>お知らせ</h3>
-				<dl>
-					<dt>2020.07.30</dt>
-					<dd>お盆期間の入院について</dd>
-					<dt>2020.07.25</dt>
-					<dd>8月の診療時間について</dd>
-					<dt>2020.07.02</dt>
-					<dd>熱中症にご注意ください</dd>
-					<dt>2020.06.25</dt>
-					<dd>7月の診療時間について</dd>
-					<dt>2020.06.03</dt>
-					<dd>6月26日（金）臨時休診いたします</dd>
-				</dl>
-			</div>
-			<div class="info-schedule">
-				<h3>診療のご案内</h3>
-				<table>
-					<tr>
-						<th class="reception-time">受付時間</th>
-						<th>月</th>
-						<th>火</th>
-						<th>水</th>
-						<th>木</th>
-						<th>金</th>
-						<th>土</th>
-						<th class="sun">日</th>
-					</tr>
-					<tr>
-						<th>10:00〜13:00</th>
-						<td>●</td>
-						<td>●</td>
-						<td>−</td>
-						<td>●</td>
-						<td>●</td>
-						<td>●</td>
-						<td>−</td>
-					</tr>
-					<tr>
-						<th class="time">15:00〜18:00</th>
-						<td>●</td>
-						<td>●</td>
-						<td>−</td>
-						<td>●</td>
-						<td>●</td>
-						<td>−</td>
-						<td class="bottom-right">−</td>
-					</tr>
-				</table>
-				<p class="reserved">
-					<span class="tel">TEL．</span>01-2345-6789<span class="appointment">【予約制】</span>
-				</p>
-				<p>受付時間：10:00～13:00／15:00～18:00</p>
-				<p>お電話でご予約のうえお越しください。<br>
-					水曜・土曜午後・日曜・祝日は休診です。</p>
+			<div class="info-container">
+				<div class="info-news">
+					<h3>お知らせ</h3>
+					<dl>
+						<dt>2020.07.30</dt>
+						<dd>お盆期間の入院について</dd>
+						<dt>2020.07.25</dt>
+						<dd>8月の診療時間について</dd>
+						<dt>2020.07.02</dt>
+						<dd>熱中症にご注意ください</dd>
+						<dt>2020.06.25</dt>
+						<dd>7月の診療時間について</dd>
+						<dt>2020.06.03</dt>
+						<dd>6月26日（金）臨時休診いたします</dd>
+					</dl>
+				</div>
+				<div class="info-schedule">
+					<h3>診療のご案内</h3>
+					<table>
+						<tr>
+							<th class="reception-time">受付時間</th>
+							<th>月</th>
+							<th>火</th>
+							<th>水</th>
+							<th>木</th>
+							<th>金</th>
+							<th>土</th>
+							<th class="sun">日</th>
+						</tr>
+						<tr>
+							<th>10:00〜13:00</th>
+							<td>●</td>
+							<td>●</td>
+							<td>−</td>
+							<td>●</td>
+							<td>●</td>
+							<td>●</td>
+							<td>−</td>
+						</tr>
+						<tr>
+							<th class="time">15:00〜18:00</th>
+							<td>●</td>
+							<td>●</td>
+							<td>−</td>
+							<td>●</td>
+							<td>●</td>
+							<td>−</td>
+							<td class="bottom-right">−</td>
+						</tr>
+					</table>
+					<p class="reserved">
+						<span class="tel">TEL．</span>01-2345-6789<span class="appointment">【予約制】</span>
+					</p>
+					<p>受付時間：10:00～13:00／15:00～18:00</p>
+					<p>お電話でご予約のうえお越しください。<br>
+						水曜・土曜午後・日曜・祝日は休診です。</p>
+				</div>
 			</div>
 		</section>
 	<section class="target">
